# twitch-chat

./: .gitignore  CMakeLists.txt  header_table_generate.gperf  makefile  readme.md  twitchchat.h
irc/: client.c  client.h  emote.c  emote.h  irc.c  irc_struct.c  irc_struct.h  main_irc.c  main_irc.h  parse.c  parse.h  twitchchat.h  util.c  util.h
